GL/src/test/deca/context/invalid/deca_sans_objet/incompatiblearith.deca
// Description :
// test de déclaration des variables
//
// Resultats :
// Ligne 12: type d'opérande incompatible
//
// Historique:
//    cree le 01/01/2026

{
  int x;
  x = true * 3;
}